# bulk-image-optimizer-api

./: .gitignore  Cargo.toml  README.md  index.html  openapi.json  package-lock.json  package.json  style.css  wrangler.toml
.github/workflows/: build-wasm.yml  deploy.yml
src/: index.js  lib.rs
