[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
